update to about

--- a/about.html
+++ b/about.html
@@ -31,21 +31,40 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ <ul>
+  <li style="float:left" "padding-left=50px"><img src="images/logo.png" style="height:50px"></li>
+  <li><a href="#home">Help</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#help">Home</a></li>
+</ul>
+  
+
   <div class="container">
 	<div class="row" style ="margin-left : 35%">
-		
-			<div style="margin-top:10%">
-				<div class="six columns">
-					<div style="background-color:#50B8FF; text-align:middle; vertical-align: middle;"> 
-						<h3>About CloudTunes</h3>
-						</div>
-				<h4 style="margin-top:30px">What is CloudTunes?</h4>
-				<p>CloudTunes is our (Jason Lin and Calvin Lin) app project for Hack the North 2019. We decided to make an app
-				that allows users to enter a city</p>
-			</div>
-					</div>
+		<div style="margin-top:10%">
+			<div class="six columns">
+				<div style="background-color:#50B8FF; text-align:middle; vertical-align: middle;"> 
+					<h3>About CloudTunes</h3>
+					
 				</div>
+				<h4 style="margin-top:30px"><b>What is CloudTunes?</b></h4>
 			</div>
+		</div>
+	</div>
+</div>
+
+<div class ="container">
+	<div class ="row">
+		<h5>CloudTunes is our (Jason Lin and Calvin Lin) project for Hack the North 2019. We decided to make an app
+			that allows users to enter a city and have all the weather information for that city displayed for the user. The app  
+			also plays music/sounds that matches that weather as well. The atmosphere created by this is meant to allow the 
+			person to have an immersive experience while checking the weather. This app is our attempt to learn new ways of programming
+			as we are experimenting with new languages and ideas. The method behind the app is quite simple as well.
+			Once the user has input a city, our app makes an API call to obtain all the necessary weather information
+			for that specific city. The rest is just displaying it to the screen. Thank you for taking a look at our
+			project.</h5>
+	</div>
+<div class="container">
 			
 
 <!-- End Document
