--- a/help.html
+++ b/help.html
@@ -5,6 +5,51 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>CloudTunes</title>
-  <meta name="description" content="Weather app with music">
+  <title>Help With CloudTunes</title>
+  <meta name="description" content="Help Page">
   <meta name="author" content="Jason and Calvin Lin">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/cticon.png">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ <ul>
+  <li style="float:left" "padding-left=50px"><img src="images/logo.png" style="height:50px"></li>
+  <li><a href="#home">Help</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#help">Home</a></li>
+</ul>
+  
+
+  <div class="container">
+	<h3>Help Steps</h3>
+	<h4 style="margin-top:25px">Step 1. Type in the city that you want to check the weather for.</h2>
+	<img src="images/help1.png" style="width:75%;">
+	<h4 style="margin-top:25px">Step 2. Click the show me button.</h2>
+	<img src="images/help2.png" style="width:75%;">
+	<h1 style="margin-top:50px">You're done! It's that easy.</h1>
+  </div>
+					
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
