--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
   <li><a href="#about">About</a></li>
   <li><a href="#help">Home</a></li>
 </ul>
+	
+<img src="images/frontpage1.png" style="margin-bottom:0">
 
   <div class="container">
+  
     <div class="one-half row" style ="margin-left : 35%">
-      <div class="one-half column" style="margin-top: 25%">
+      <div class="one-half column" style="margin-top: 7%">
+	  
         <h1>CloudTunes</h1>	
         <p>Enter City:</p>
 		<form>
